--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
 @charset "UTF-8";
+.video-placeholder {
+  position: relative;
+  background-color: black;
+  color: white;
+  padding-top: 56.25%;
+  width: 100%;
+  max-width: 100%;
+}
+.video-placeholder__header {
+  font-size: 1rem;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%);
+  left: 50%;
+}
+
 /*!
  * Bootstrap v4.6.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
