--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,5 +7,8 @@
 // Components
 @import 'components/video';
 
+// Vendor
+@import 'vendor/video-js.scss';
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
